The coarse tier does not destabilise the bench -- twenty runs say so
Recorded rather than quietly deleted, because it was written into
findings.md and a commit message and believed for an afternoon.

Three 60 s runs had scattered 18.08% and 68.43% against a 6% budget with
--coarse where a control run came in at 3.62%, which looked like the coarse
tier disturbing the bench's own duration measurement. Ten runs per arm,
alternating so drift landed on both equally:

  --coarse   mean scatter  9.56%   failed 9 of 10
  control    mean scatter 13.22%   failed 9 of 10

The control arm is worse. Three runs cannot tell a 9.56% distribution from a
13.22% one, and reading a difference into them was the error -- the same one
the report's `noise` column exists to prevent, committed by hand in the
harness.

What the campaign found instead is a real defect, and in the bench: its
self-check is calibrated for a cold machine. Each arm passed exactly once, on
its first run, and failed every run after. DURATION_TOLERANCE is 6%, taken
from a sweep whose worst observation was 2.9%; warm, at 60 s, the scatter sits
at 8-14%. So the bench is in practice a one-run-per-cooldown instrument, and
what to do about that is now the open question. Clock across the campaign:
mean 179% of nominal, range 85-220%.

Worth keeping deliberately: the coarse tier's own four checks passed on all
twenty runs, including the eighteen where the bench declared itself broken.
They compare the profiler's spans against the workers' stopwatches on the same
intervals, and counts against counts, so a clock that halves mid-run cancels on
both sides. The verification is clock-independent by construction.

Also here: the bench prints the five worst scatter figures rather than only the
worst one -- a maximum cannot tell "one operation blew up" from "everything
drifted together", and it was the second every time. And two more rules in
CLAUDE.md, both learned the hard way this session: do not swap instruments
mid-measurement, 